<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dadosMainActivity"
            type="tads.eaj.ufrn.ishiharaapplication.DadosMainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_lateral"
            android:layout_marginTop="@dimen/margem_top"
            android:text="@string/o_que"
            android:textSize="@dimen/texto_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_lateral"
            android:layout_marginTop="@dimen/margem_entre_views"
            android:text="@string/descricao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margem_lateral"
            android:layout_marginTop="@dimen/margem_entre_views"
            android:text="@string/faca_o_teste"
            android:textSize="@dimen/texto_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/teste1Button"
            android:layout_width="@dimen/tam_botao"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_entre_views"
            android:text="@string/teste_1"
            app:layout_constraintBottom_toTopOf="@+id/teste2Button"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/teste2Button"
            android:layout_width="@dimen/tam_botao"
            android:layout_height="wrap_content"
            android:text="@string/teste_2"
            app:layout_constraintBottom_toTopOf="@+id/teste3Button"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/teste1Button" />

        <Button
            android:id="@+id/teste3Button"
            android:layout_width="@dimen/tam_botao"
            android:layout_height="wrap_content"
            android:text="@string/teste_3"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/teste2Button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margem_lateral"
            android:text="@string/resultados"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/resp1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margem_lateral"
            android:text="@{dadosMainActivity.teste1}"
            app:layout_constraintBottom_toBottomOf="@+id/teste1Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/teste1Button" />

        <TextView
            android:id="@+id/resp2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margem_lateral"
            android:text="@{dadosMainActivity.teste2}"
            app:layout_constraintBottom_toBottomOf="@+id/teste2Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/teste2Button" />

        <TextView
            android:id="@+id/resp3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margem_lateral"
            android:text="@{dadosMainActivity.teste3}"
            app:layout_constraintBottom_toBottomOf="@+id/teste3Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teste2Button" />

        <Button
            android:id="@+id/verificarButton"
            android:layout_width="@dimen/tam_botao"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem_entre_views"
            android:text="@string/verificar"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/teste3Button" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margem_lateral"
            android:text="@{dadosMainActivity.resultado}"
            app:layout_constraintBottom_toBottomOf="@+id/verificarButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/verificarButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
